[gd_scene format=3 uid="uid://cmusicboxdemo"]

[ext_resource type="Script" path="res://src/minigames/music_box_demo.gd" id="1_demo"]
[ext_resource type="PackedScene" uid="uid://cmusicbox001" path="res://scenes/minigames/music_box.tscn" id="2_puzzle"]

[node name="MusicBoxDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = true
size = Vector2i(500, 250)
render_target_update_mode = 4

[node name="MusicBox" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_puzzle")]

[node name="DebugUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -90.0
offset_right = 240.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="RoundLabel" type="Label" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -80.0
offset_right = 0.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
text = "Round: 1 / 5"

[node name="SequenceLabel" type="Label" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -55.0
offset_right = 230.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.9, 0.9, 1)
text = "Sequence: [0]"

[node name="PlayButton" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -30.0
offset_right = -130.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "â–¶ Play"

[node name="AutosolveButton" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "âœ“ Solve"

[node name="ResetButton" type="Button" parent="DebugUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -30.0
offset_right = 90.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "â†º Reset"

[node name="WinLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "ðŸŽµ Complete!"
horizontal_alignment = 1
vertical_alignment = 1
